@@ -1,3 +1,6 @@
+29 October 2015: Wouter
+	- patch from Doug Hogan for SSL_OP_NO_SSLvx options.
+
 28 October 2015: Wouter
 	- Fix checklock testcode for linux threads on exit.
 
